2015-02-06  Corinna Vinschen  <corinna@vinschen.de>

	* common.din: Export cabsl, cimagl, creall, finitel, hypotl, sqrtl.
	* include/cygwin/version.h (CYGWIN_VERSION_API_MINOR): Bump.

2015-02-06  Corinna Vinschen  <corinna@vinschen.de>

	* include/cygwin/version.h (CYGWIN_VERSION_DLL_MINOR): Bump to 35.

2015-02-06  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_proc.cc (format_proc_cpuinfo): Enable multi-core fields
	on Intel CPUs.

2015-02-04  Corinna Vinschen  <corinna@vinschen.de>

	* common.din (wcstold): Export.
	* include/cygwin/version.h (CYGWIN_VERSION_API_MINOR): Bump.

2015-02-03  Corinna Vinschen  <corinna@vinschen.de>

	* mkvers.sh: Automate generating the copyright date in the version
	resource.
	* winver.rc: Ditto.

2015-01-28  Corinna Vinschen  <corinna@vinschen.de>

	* Makefile.in (VERSION_OFILES): New variable containing object files
	with version information.  Use throughout.
	(clean): Drop winver_stamp.
	(version.cc winver.o): Drop empty rule.
	(winver_stamp): Convert to rule targeting version.cc and winver.o
	directly.  Drop touching winver_stamp.  Fix typo.

2015-01-24  Corinna Vinschen  <corinna@vinschen.de>

	* uname.cc (uname): Shorten "WOW64" to "WOW" to account for the new
	Windows 10 OS version "10.0" starting with preview build 9926.

2015-01-23  Pierre A. Humblet <pierre@phumblet.no-ip.org>

	* net.cc (cygwin_inet_pton): Declare.
	(gethostby_specials): New function.
	(gethostby_helper): Change returned addrtype in 4-to-6 case.
	(gethostbyname2): Call gethostby_specials.

2015-01-22  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler.h (class fhandler_process): Add fd_type member.
	* fhandler_process.cc (process_tab): Fix indentation.
	(fhandler_process::exists): Rely on format_process_fd returning file
	type in fd_type.
	(struct process_fd_t): Add fd_type member.
	(fhandler_process::fill_filebuf): Allow format_process_fd to set
	this->fd_type member.
	(format_process_fd): Fix path evaluation to allow recognizing trailing